--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lists Lab</title>
+    <title>Kelly's Grilled Cheese Sandwich</title>
   </head>
   <body>
     <!-- Write your HTML in this file -->
+    <h1>Kelly's Grilled Cheese Sandwich</h1>
+    <p>
+    <ul>
+      <li>Sandwiches
+        <ul>
+          <li>2 slices of bread</li>
+          <li>
+            4 slices of cheese
+          <ul>- cheddar</ul>
+          <ul>- mozarella</ul>
+          <ul>- pepper jack</ul>
+          </li>
+          <li>1 tbsp of butter</li>
+        </ul>
+      </li>
+    </ul>
+    </p>
+    <p>
+      <h2>Procedure to be followed</h2>
+      <ol>
+        <li>spread butter on bread & pan</li>
+        <li>place bread in frying pan & fry</li>
+        <li>add cheese on top of bread</li>
+        <li>cover with second slide of bread</li>
+        <li>turn over & fry for 2 minutes</li>
+      </ol>
+    </p>
+    <p>
+      <h3>Top 5 Favourite Foods</h3>
+      <ol>
+        <li>Grilled Cheese
+        <li>Sushi
+        <li>Cheese and crackers
+        <li>Cheese soup
+        <li>Nacho Cheese French Fries
+      </ol>
+    </p>
   </body>
 </html>
